# conf_fusion

./: README.rst  pyproject.toml
confusion/: __init__.py  config.py  parser.py
confusion/test/: test_cfn2dot.py  test_config.py  test_parser.py  test_toml2dot.py
confusion/utils/: cfn2dot.py  toml2dot.py
