# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "confusion"
version = "0.1.0"
description = "A pre-processor for TOML files."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["configparser", "ini", "TOML"]
authors = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
]
